# pifacedigital-mqtt-client

./: Makefile  README.md  pyproject.toml  requirements.txt
etc/: config.ini
pifacedigital_mqtt_client/: pifacedigital_mqtt_client.py
systemd/: pifacedigital-mqtt-client.service
